--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,8 @@
     }
    ],
    "source": [
-    "email = \"art.vandelay@vandelay.co\"\n"
+    "email = \"art.vandelay@vandelay.co\"\n",
+    "title = ceo"
    ]
   },
   {
