--- a/index.ipynb
+++ b/index.ipynb
@@ -103,7 +103,7 @@
    ],
    "source": [
     "email = \"art.vandelay@vandelay.co\"\n",
-    "title = ceo"
+    "title = \"ceo\"\n"
    ]
   },
   {
