--- a/index.ipynb
+++ b/index.ipynb
@@ -103,7 +103,8 @@
    ],
    "source": [
     "email = \"art.vandelay@vandelay.co\"\n",
-    "title = \"ceo\"\n"
+    "title = \"ceo\"\n",
+    "Phone\"7285553334\", \"vandelay.com\""
    ]
   },
   {
