Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -104,7 +104,8 @@
    "source": [
     "email = \"art.vandelay@vandelay.co\"\n",
     "title = \"ceo\"\n",
-    "Phone_Number = \"7285553334\", \"vandelay.com\""
+    "Phone_Number = \"7285553334\"\n",
+    "Website = \"vandelay.com\""
    ]
   },
   {
